# Mohican

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: README.md  pyproject.toml
backend/src/mohican_backend/: artifacts.py  catalog.py  main.py  models.py  process_runner.py  scheduler.py  settings.py  store.py
backend/src/mohican_backend/engines/: __init__.py  base.py  garak.py  promptfoo.py  utils.py
backend/tests/: test_api.py  test_builders.py  test_parsers.py
docs/: backend-api.md
docs/backend-design/: README.md
docs/backend-design/api/: mohican-api-contract.md
docs/backend-design/docs/: engine-behavior.md  runner-logic.md
docs/backend-design/schemas/: job-request.schema.json  normalized-result.schema.json
docs/dashboard-blocks/: README.md
docs/dashboard-blocks/configs/: blocks.json  module_placements.json  scenarios.json
docs/dashboard-blocks/schema/: block.schema.json
docs/dashboard-blocks/tools/: validate_blocks.py
report-generator/: generate_report.py  report_template.md.j2  requirements.txt  sample_results.json
src/: App.tsx  data.ts  styles.css  types.ts
